Fix test: add E-ARK SIPs spec version 2.0.4